test_regress/t/t_class_assign_bad.out
%Error: t/t_class_assign_bad.v:30:7: Assign RHS expects a CLASSREFDTYPE 'Cls', got BASICDTYPE 'bit'
                                   : ... note: In instance 't'
   30 |     c = 0;
      |       ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_class_assign_bad.v:31:7: Assign RHS expects a CLASSREFDTYPE 'Cls', got BASICDTYPE 'bit'
                                   : ... note: In instance 't'
   31 |     c = 1;
      |       ^
%Error: t/t_class_assign_bad.v:32:7: Assign RHS expects a CLASSREFDTYPE 'Cls', got CLASSREFDTYPE 'Cls2'
                                   : ... note: In instance 't'
   32 |     c = c2;
      |       ^
%Error: t/t_class_assign_bad.v:33:11: Assign RHS expects a CLASSREFDTYPE 'ClsExt', got CLASSREFDTYPE 'Cls'
                                    : ... note: In instance 't'
   33 |     c_ext = c;
      |           ^
%Error: t/t_class_assign_bad.v:34:9: Assign RHS expects a CLASSREFDTYPE 'Cls2', got CLASSREFDTYPE 'Cls'
                                   : ... note: In instance 't'
   34 |     ct2 = c;
      |         ^
%Error: t/t_class_assign_bad.v:36:5: Function Argument expects a CLASSREFDTYPE 'Cls', got BASICDTYPE 'bit'
                                   : ... note: In instance 't'
   36 |     t(0);
      |     ^
%Error: t/t_class_assign_bad.v:37:5: Function Argument expects a CLASSREFDTYPE 'Cls', got BASICDTYPE 'bit'
                                   : ... note: In instance 't'
   37 |     t(1);
      |     ^
%Error: t/t_class_assign_bad.v:38:5: Function Argument expects a CLASSREFDTYPE 'Cls', got CLASSREFDTYPE 'Cls2'
                                   : ... note: In instance 't'
   38 |     t(c2);
      |     ^
%Error: t/t_class_assign_bad.v:39:5: Function Argument expects a CLASSREFDTYPE 'ClsExt', got CLASSREFDTYPE 'Cls'
                                   : ... note: In instance 't'
   39 |     f(c);
      |     ^
%Error: Exiting due to
